[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UFO Main/UFOMainAnims1.png" type="Texture" id=1]
[ext_resource path="res://assets/UFO Main/GUI/healthbar.png" type="Texture" id=2]
[ext_resource path="res://UI/HealthBar.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
scale = Vector2( 0.8, 0.8 )
transform = Transform2D( 0.8, 0, 0, 0.8, 0, 0 )
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.25
margin_top = 1.25
margin_right = 1.25
margin_bottom = 1.25

[node name="TextureRect" type="TextureRect" parent="HBoxContainer"]
margin_right = 270.0
margin_bottom = 360.0
texture = ExtResource( 2 )

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 35.0
margin_top = 27.5
margin_right = -374.0
margin_bottom = -297.5

[node name="health1" type="TextureRect" parent="HBoxContainer2"]
margin_right = 48.0
margin_bottom = 35.0
texture = ExtResource( 1 )

[node name="health2" type="TextureRect" parent="HBoxContainer2"]
margin_left = 52.0
margin_right = 100.0
margin_bottom = 35.0
texture = ExtResource( 1 )

[node name="health3" type="TextureRect" parent="HBoxContainer2"]
margin_left = 104.0
margin_right = 152.0
margin_bottom = 35.0
texture = ExtResource( 1 )

[node name="health4" type="TextureRect" parent="HBoxContainer2"]
margin_left = 156.0
margin_right = 204.0
margin_bottom = 35.0
texture = ExtResource( 1 )
